# agentic-ai

money_maker/: README.md  env.sample  pyproject.toml  report.md
money_maker/src/money_maker/: crew.py  main.py
money_maker/src/money_maker/config/: agents.yaml  tasks.yaml
