[project]
name = "money_maker"
version = "0.1.0"
description = "money-maker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
money_maker = "money_maker.main:run"
run_crew = "money_maker.main:run"
train = "money_maker.main:train"
replay = "money_maker.main:replay"
test = "money_maker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
